crates/toml_edit/tests/fixtures/invalid/float-underscore-before-point.stderr
TOML parse error at line 1, column 9
  |
1 | bad = 1_.2
  |         ^
Invalid integer
Expected digit
